source/glad2/gles2.d

alias PFNGLGETPROGRAMINFOLOGPROC = void function (GLuint program, GLsizei bufSize, GLsizei* length, GLchar* infoLog);
alias PFNGLGETPROGRAMINTERFACEIVPROC = void function (GLuint program, GLenum programInterface, GLenum pname, GLint* params);
alias PFNGLGETPROGRAMPIPELINEINFOLOGPROC = void function (GLuint pipeline, GLsizei bufSize, GLsizei* length, GLchar* infoLog);
alias PFNGLGETPROGRAMPIPELINEIVPROC = void function (GLuint pipeline, GLenum pname, GLint* params);
alias PFNGLGETPROGRAMRESOURCEINDEXPROC = uint function (GLuint program, GLenum programInterface, const(GLchar)* name);
alias PFNGLGETPROGRAMRESOURCELOCATIONPROC = int function (GLuint program, GLenum programInterface, const(GLchar)* name);
alias PFNGLGETPROGRAMRESOURCENAMEPROC = void function (GLuint program, GLenum programInterface, GLuint index, GLsizei bufSize, GLsizei* length, GLchar* name);
alias PFNGLGETPROGRAMRESOURCEIVPROC = void function (GLuint program, GLenum programInterface, GLuint index, GLsizei propCount, const(GLenum)* props, GLsizei count, GLsizei* length, GLint* params);
alias PFNGLGETPROGRAMIVPROC = void function (GLuint program, GLenum pname, GLint* params);
alias PFNGLGETQUERYOBJECTUIVPROC = void function (GLuint id, GLenum pname, GLuint* params);
alias PFNGLGETQUERYIVPROC = void function (GLenum target, GLenum pname, GLint* params);
alias PFNGLGETRENDERBUFFERPARAMETERIVPROC = void function (GLenum target, GLenum pname, GLint* params);
alias PFNGLGETSAMPLERPARAMETERFVPROC = void function (GLuint sampler, GLenum pname, GLfloat* params);
alias PFNGLGETSAMPLERPARAMETERIVPROC = void function (GLuint sampler, GLenum pname, GLint* params);
alias PFNGLGETSHADERINFOLOGPROC = void function (GLuint shader, GLsizei bufSize, GLsizei* length, GLchar* infoLog);
alias PFNGLGETSHADERPRECISIONFORMATPROC = void function (GLenum shadertype, GLenum precisiontype, GLint* range, GLint* precision);
alias PFNGLGETSHADERSOURCEPROC = void function (GLuint shader, GLsizei bufSize, GLsizei* length, GLchar* source);
alias PFNGLGETSHADERIVPROC = void function (GLuint shader, GLenum pname, GLint* params);
alias PFNGLGETSTRINGPROC = const(ubyte)* function (GLenum name);
alias PFNGLGETSTRINGIPROC = const(ubyte)* function (GLenum name, GLuint index);
alias PFNGLGETSYNCIVPROC = void function (GLsync sync, GLenum pname, GLsizei count, GLsizei* length, GLint* values);
alias PFNGLGETTEXLEVELPARAMETERFVPROC = void function (GLenum target, GLint level, GLenum pname, GLfloat* params);
alias PFNGLGETTEXLEVELPARAMETERIVPROC = void function (GLenum target, GLint level, GLenum pname, GLint* params);
alias PFNGLGETTEXPARAMETERFVPROC = void function (GLenum target, GLenum pname, GLfloat* params);
alias PFNGLGETTEXPARAMETERIVPROC = void function (GLenum target, GLenum pname, GLint* params);
alias PFNGLGETTRANSFORMFEEDBACKVARYINGPROC = void function (GLuint program, GLuint index, GLsizei bufSize, GLsizei* length, GLsizei* size, GLenum* type, GLchar* name);
alias PFNGLGETUNIFORMBLOCKINDEXPROC = uint function (GLuint program, const(GLchar)* uniformBlockName);
alias PFNGLGETUNIFORMINDICESPROC = void function (GLuint program, GLsizei uniformCount, const(GLchar*)* uniformNames, GLuint* uniformIndices);
alias PFNGLGETUNIFORMLOCATIONPROC = int function (GLuint program, const(GLchar)* name);
alias PFNGLGETUNIFORMFVPROC = void function (GLuint program, GLint location, GLfloat* params);
alias PFNGLGETUNIFORMIVPROC = void function (GLuint program, GLint location, GLint* params);
alias PFNGLGETUNIFORMUIVPROC = void function (GLuint program, GLint location, GLuint* params);
alias PFNGLGETVERTEXATTRIBIIVPROC = void function (GLuint index, GLenum pname, GLint* params);
alias PFNGLGETVERTEXATTRIBIUIVPROC = void function (GLuint index, GLenum pname, GLuint* params);
alias PFNGLGETVERTEXATTRIBPOINTERVPROC = void function (GLuint index, GLenum pname, void** pointer);
alias PFNGLGETVERTEXATTRIBFVPROC = void function (GLuint index, GLenum pname, GLfloat* params);
alias PFNGLGETVERTEXATTRIBIVPROC = void function (GLuint index, GLenum pname, GLint* params);
alias PFNGLHINTPROC = void function (GLenum target, GLenum mode);
alias PFNGLINVALIDATEFRAMEBUFFERPROC = void function (GLenum target, GLsizei numAttachments, const(GLenum)* attachments);
alias PFNGLINVALIDATESUBFRAMEBUFFERPROC = void function (GLenum target, GLsizei numAttachments, const(GLenum)* attachments, GLint x, GLint y, GLsizei width, GLsizei height);
alias PFNGLISBUFFERPROC = ubyte function (GLuint buffer);
alias PFNGLISENABLEDPROC = ubyte function (GLenum cap);
alias PFNGLISFRAMEBUFFERPROC = ubyte function (GLuint framebuffer);
alias PFNGLISPROGRAMPROC = ubyte function (GLuint program);
alias PFNGLISPROGRAMPIPELINEPROC = ubyte function (GLuint pipeline);
alias PFNGLISQUERYPROC = ubyte function (GLuint id);
alias PFNGLISRENDERBUFFERPROC = ubyte function (GLuint renderbuffer);
alias PFNGLISSAMPLERPROC = ubyte function (GLuint sampler);
alias PFNGLISSHADERPROC = ubyte function (GLuint shader);
alias PFNGLISSYNCPROC = ubyte function (GLsync sync);
alias PFNGLISTEXTUREPROC = ubyte function (GLuint texture);
alias PFNGLISTRANSFORMFEEDBACKPROC = ubyte function (GLuint id);
alias PFNGLISVERTEXARRAYPROC = ubyte function (GLuint array);
alias PFNGLLINEWIDTHPROC = void function (GLfloat width);
alias PFNGLLINKPROGRAMPROC = void function (GLuint program);
alias PFNGLMAPBUFFERRANGEPROC = void* function (GLenum target, GLintptr offset, GLsizeiptr length, GLbitfield access);
alias PFNGLMEMORYBARRIERPROC = void function (GLbitfield barriers);
alias PFNGLMEMORYBARRIERBYREGIONPROC = void function (GLbitfield barriers);
alias PFNGLPAUSETRANSFORMFEEDBACKPROC = void function ();
alias PFNGLPIXELSTOREIPROC = void function (GLenum pname, GLint param);
alias PFNGLPOLYGONOFFSETPROC = void function (GLfloat factor, GLfloat units);
alias PFNGLPROGRAMBINARYPROC = void function (GLuint program, GLenum binaryFormat, const(void)* binary, GLsizei length);
alias PFNGLPROGRAMPARAMETERIPROC = void function (GLuint program, GLenum pname, GLint value);
alias PFNGLPROGRAMUNIFORM1FPROC = void function (GLuint program, GLint location, GLfloat v0);
alias PFNGLPROGRAMUNIFORM1FVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORM1IPROC = void function (GLuint program, GLint location, GLint v0);
alias PFNGLPROGRAMUNIFORM1IVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLint)* value);
alias PFNGLPROGRAMUNIFORM1UIPROC = void function (GLuint program, GLint location, GLuint v0);
alias PFNGLPROGRAMUNIFORM1UIVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLuint)* value);
alias PFNGLPROGRAMUNIFORM2FPROC = void function (GLuint program, GLint location, GLfloat v0, GLfloat v1);
alias PFNGLPROGRAMUNIFORM2FVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORM2IPROC = void function (GLuint program, GLint location, GLint v0, GLint v1);
alias PFNGLPROGRAMUNIFORM2IVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLint)* value);
alias PFNGLPROGRAMUNIFORM2UIPROC = void function (GLuint program, GLint location, GLuint v0, GLuint v1);
alias PFNGLPROGRAMUNIFORM2UIVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLuint)* value);
alias PFNGLPROGRAMUNIFORM3FPROC = void function (GLuint program, GLint location, GLfloat v0, GLfloat v1, GLfloat v2);
alias PFNGLPROGRAMUNIFORM3FVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORM3IPROC = void function (GLuint program, GLint location, GLint v0, GLint v1, GLint v2);
alias PFNGLPROGRAMUNIFORM3IVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLint)* value);
alias PFNGLPROGRAMUNIFORM3UIPROC = void function (GLuint program, GLint location, GLuint v0, GLuint v1, GLuint v2);
alias PFNGLPROGRAMUNIFORM3UIVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLuint)* value);
alias PFNGLPROGRAMUNIFORM4FPROC = void function (GLuint program, GLint location, GLfloat v0, GLfloat v1, GLfloat v2, GLfloat v3);
alias PFNGLPROGRAMUNIFORM4FVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORM4IPROC = void function (GLuint program, GLint location, GLint v0, GLint v1, GLint v2, GLint v3);
alias PFNGLPROGRAMUNIFORM4IVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLint)* value);
alias PFNGLPROGRAMUNIFORM4UIPROC = void function (GLuint program, GLint location, GLuint v0, GLuint v1, GLuint v2, GLuint v3);
alias PFNGLPROGRAMUNIFORM4UIVPROC = void function (GLuint program, GLint location, GLsizei count, const(GLuint)* value);
alias PFNGLPROGRAMUNIFORMMATRIX2FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX2X3FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX2X4FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX3FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX3X2FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX3X4FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX4FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX4X2FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLPROGRAMUNIFORMMATRIX4X3FVPROC = void function (GLuint program, GLint location, GLsizei count, GLboolean transpose, const(GLfloat)* value);
alias PFNGLREADBUFFERPROC = void function (GLenum src);
alias PFNGLREADPIXELSPROC = void function (GLint x, GLint y, GLsizei width, GLsizei height, GLenum format, GLenum type, void* pixels);
alias PFNGLRELEASESHADERCOMPILERPROC = void function ();
alias PFNGLRENDERBUFFERSTORAGEPROC = void function (GLenum target, GLenum internalformat, GLsizei width, GLsizei height);
alias PFNGLRENDERBUFFERSTORAGEMULTISAMPLEPROC = void function (GLenum target, GLsizei samples, GLenum internalformat, GLsizei width, GLsizei height);
alias PFNGLRESUMETRANSFORMFEEDBACKPROC = void function ();
alias PFNGLSAMPLECOVERAGEPROC = void function (GLfloat value, GLboolean invert);
alias PFNGLSAMPLEMASKIPROC = void function (GLuint maskNumber, GLbitfield mask);
alias PFNGLSAMPLERPARAMETERFPROC = void function (GLuint sampler, GLenum pname, GLfloat param);
alias PFNGLSAMPLERPARAMETERFVPROC = void function (GLuint sampler, GLenum pname, const(GLfloat)* param);
alias PFNGLSAMPLERPARAMETERIPROC = void function (GLuint sampler, GLenum pname, GLint param);
alias PFNGLSAMPLERPARAMETERIVPROC = void function (GLuint sampler, GLenum pname, const(GLint)* param);
alias PFNGLSCISSORPROC = void function (GLint x, GLint y, GLsizei width, GLsizei height);
alias PFNGLSHADERBINARYPROC = void function (GLsizei count, const(GLuint)* shaders, GLenum binaryFormat, const(void)* binary, GLsizei length);
alias PFNGLSHADERSOURCEPROC = void function (GLuint shader, GLsizei count, const(GLchar*)* string, const(GLint)* length);
alias PFNGLSTENCILFUNCPROC = void function (GLenum func, GLint ref_, GLuint mask);
alias PFNGLSTENCILFUNCSEPARATEPROC = void function (GLenum face, GLenum func, GLint ref_, GLuint mask);
alias PFNGLSTENCILMASKPROC = void function (GLuint mask);
alias PFNGLSTENCILMASKSEPARATEPROC = void function (GLenum face, GLuint mask);
